client/src/styles/App.scss
@import "./variables";
@import "./buttons";
@import "./paqueteria";
@import "./repartidor";
@import "./popup";
@import "./formComerciales";
@import "./buttonCerrarPopup";
@import "./doorBirdView";
@import "./comercialData";
@import "./buttons-data";
@import "./dealerData";
@import "./buttonCloseData";
@import "./buttonGroup";


/*
* Probar el fondo de blau, a petició de Jordi.
*
* Ajustar responsive settings per a mv ❌
*   
*   1- El formulari no es redueix quan entrem desde mv ❌
*   2- Les images dels repartidors es superposen quan el mv està vertical ❌
*   3- Afegir svg´s per als botóns principals ❌
*/

body {
    margin: 0;
    font-family: $main_font;
    display: grid;
    min-height: 100vh;
    background-color: $prueba_1_fondo;

    * {
        font-weight: 400;
    }

    *::before,
    *::after {
        box-sizing: border-box;
    }

    #root {
        width: 95vw;
        max-width: 1600px;
        margin: auto;
    }

    .container-box {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        height: 100vh;

        .container-box_video-feed {
            width: 59%;
            height: 32rem;
            border-radius: 15px;
            overflow: hidden;
            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
            margin-top: 2rem;
            background-color: #000;
        }

        @media (width: 768px) {
            height: 25rem;
            width: 46rem;
            font-size: 1.4rem;
            gap: 0.5rem;
        }

        @media (width: 480px) {
            height: 40rem;
            width: 27rem;
            font-size: 1.4rem;
            gap: 0.5rem;
            justify-content: center;
        }

        .container-box_buttons--data {
            // position: absolute;
            // top: 10px;
            // right: 10px;
            display: flex;
            justify-content: flex-end;
            align-items: flex-end;
            flex-direction: row;
            width: 100%;                        
        }

        .container-logo {
            display: flex;
            justify-content: flex-start;
            align-items: center;
            padding: 2rem 0;
        }

        .logo-imasd {
            width: 30rem;
            height: 10rem;
            max-width: 90%;
        }

        .container-box_buttons-main {
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
        }
    }
}

